SVN

* [510] Added a handy utility for modifying arrays which is useful for securing record creation/updating.

If you have this code on a controller
{{{
  $this->user->setAttributes($this->params['user']);
}}}

and your users table has a column named is_admin. All it would take to a malicious user is to modify the page html to add the need field and gain admin privileges.

You could avoid by using the new Ak::pick method which will return and array with desired keys.

{{{
  $this->user->setAttributes(Ak::pick('name,email', $this->params['user']));
}}}

* [509] Parameters given to url_for do not need to be urlencoded anymore. This allows using variables with slashes.

* [476] Adding includeAndInstatiateModels and uninstallAndInstallMigration to AkUnitTest

* Making it possible to include models by default by declaring in your application_controller.php

{{{
  var $app_models = 'user,role';
}}}

this way you can avoid adding controller-wide models into every single controller.

* HTTP authentication now can have its own failure message by implementing a **access_denied** method into the application controller.

----------------------

* Model generator now supports customizing first migration version column setting from the command line like:

    ./generate model Video title, length double, author, is_searchable

* Relocated Active Record database adapters, behaviors and associations into lib/AkActiveRecord/AkDbAdapters, AkActsAsBehaviours and AkAssociations respectively.

----------

## Merging Kaste's branch with the trunk.

    WARNING: IMPORTANT CHANGES AHEAD!

* [387] Refactored AkActiveRecord::find(). 
* [387] API-change: removed find('first', $id, $options) cause finding one id is always "first". Use find($id, $options); instead.
* [395] Deprecated AkActiveRecord::find($sql) which silently expanded to AkActiveRecord::find('first', $sql).
This was ambiguous because find($sql, $bind_variables*) expanded to find('all',*)